--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
 before_script: pip install docker-compose
 
 script: 
-  - docker-compose run app sh -c "python manage.py test"
-  - docker-compose run app sh -c "flake8"
+  - docker-compose run app sh -c ["python   
+                                    manage.py test && flake8"]
+  
 
